--- a/frogs.html
+++ b/frogs.html
@@ -12,7 +12,7 @@
 	<meta property="og:title" content="Browser Flipnote Frogs - King Mayro"/>
 	<meta property="og:description" content="A small little project to recreate the Flipnote frogs from the title screen of Flipnote Studio for the most part."/>
 	<meta property="og:url" content="https://kingmayro.github.io/frogs"/>
-	<meta property="og:image" content="https://kingmayro.github.io/frogembed.png"/>
+	<meta property="og:image" content="https://kingmayro.github.io/image/frogembed.png"/>
 	<meta name="twitter:card" content="summary_large_image">
 	<meta data-react-helmet="true" name="theme-color" content="#cd532d"/>
 	
