--- a/frogs.html
+++ b/frogs.html
@@ -10,7 +10,7 @@
 	<link rel="icon" href="https://kingmayro.github.io/Frog.ico">
 	
 	<meta property="og:title" content="Browser Flipnote Frogs - King Mayro"/>
-	<meta property="og:description" content="A small little project to recreate the Flipnote frogs from the title screen of Flipnote Studio for the most part."/>
+	<meta property="og:description" content="A small little project to ''recreate'' the Flipnote frogs from the title screen of Flipnote Studio for the most part."/>
 	<meta property="og:url" content="https://kingmayro.github.io/frogs"/>
 	<meta property="og:image" content="https://kingmayro.github.io/image/frogembed.png"/>
 	<meta name="twitter:card" content="summary_large_image">
@@ -92,12 +92,6 @@
 		
 		.footertext {
 		padding:20px 20px 0px 10px;
-		}
-		
-		.memberbody {
-		display: inline-flex;
-		width:450px;
-		height: auto;
 		}
 
 		.icons {
@@ -191,7 +185,7 @@
 			height: auto;
 			}
 			
-					.name {
+			.name {
 			font-size:18px;
 			padding-top:0px;
 			padding-left:0px;
@@ -315,7 +309,7 @@
         <span class="close-btn" onclick="hideMessageBox()" style="white-space:pre-wrap;">X</span>
         <p>A small little project to recreate the Flipnote frogs from the title screen of Flipnote Studio for the most part. <br><br>Created by :</p>
 
-	 <div class=kmbody>
+	 <div>
 			<div style="padding-left:10px;">
  
 					<div style=text-align:center;>
