k I'm done with this

--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
 		
 		.boxes{
 		border-radius:10px;
-
+		}
+		
+		.spboxes{
+		border-radius:10px;
 		}
 		
 		.mainboxes{
@@ -75,6 +78,18 @@
 		width:60%;
 		}
 		
+		
+		
+		@media screen and (max-width: 1400px) {
+		
+		.mainpage {
+		margin-left:10%;
+		margin-right:10%;
+		}
+		
+		}
+		
+		
 		@media screen and (max-width: 1000px) {
 		
 		
@@ -87,6 +102,19 @@
 		
 		.projecticons {
 		width:100%;
+		}
+		
+		.spboxes{
+		text-align:center;
+		}
+		
+		.socialicons {
+		float: none;
+		padding-left:0px;
+		}
+		
+		.name {
+		padding-left:0px;
 		}
 		
 		.mainpage {
@@ -132,7 +160,7 @@
 			</div>
 
 			<div class=padneed style="display: flex;">
-						<div class=boxes style="background-color:#2e1757;padding:1px 2px 2px 1px;width:100%;">
+						<div class=spboxes style="background-color:#2e1757;padding:1px 2px 2px 1px;width:100%;">
 							
 
 							<p class=name>King Mayro</p>
@@ -162,7 +190,7 @@
 
 <div style="padding-top:20px;"></div>
 
-<div class=boxes style="background-color:#231242;padding:20px;">
+<div class=mainboxes style="background-color:#231242;">
 
 <div class=boxes style="text-align:center;border-radius:10px;background-color:#2e1757;padding:1px 20px 20px 20px;">
 <p>FamicomCD - My favorite project of mine. The concept behind FamicomCD is that it is a fictional CD-based console for the original Famicom. The project itself encapsulates multiple mini-projects under FamicomCD such as Super Mario Bros. CD.</p>
