--- a/frogs.html
+++ b/frogs.html
@@ -307,7 +307,7 @@
 
    <div class="message-box" id="messageBox">
         <span class="close-btn" onclick="hideMessageBox()" style="white-space:pre-wrap;">X</span>
-        <p>A small little project to recreate the Flipnote frogs from the title screen of Flipnote Studio for the most part. <br><br>Created by :</p>
+        <p>A small little project to ''recreate'' the Flipnote frogs from the title screen of Flipnote Studio for the most part. <br><br>Created by :</p>
 
 	 <div>
 			<div style="padding-left:10px;">
@@ -340,9 +340,8 @@
     </div>
 
 
-	
-	<button onclick="showMessageBox()" style="float:right;padding-left:5px;"><img class=verticalbutton src="browserfrog/Info.png"></img></button>
-	<a href="https://famicomcd.github.io/" style="float:right;padding-left:5px;"><img class=verticalbutton src="browserfrog/FamicomCD.png"></img></a>		
+	<a href="https://kingmayro.github.io/" style="float:right;padding-left:5px;"><img class=verticalbutton src="browserfrog/Home.png"></img></a>	
+	<button onclick="showMessageBox()" style="float:right;padding-left:5px;"><img class=verticalbutton src="browserfrog/Info.png"></img></button>		
 	<a href="https://youtube.com/KingMayro" style="float:right;padding-left:5px;"><img class=verticalbutton src="browserfrog/YouTube.png"></img></a>
 	<a href="https://github.com/KingMayro" style="float:right;padding-left:5px;"><img class=verticalbutton src="browserfrog/Github.png"></img></a>
 	</div>
