/frogs and index changes

--- a/index.html
+++ b/index.html
@@ -192,18 +192,18 @@
 
 <div class=mainboxes style="background-color:#231242;">
 
-<div class=boxes style="text-align:center;border-radius:10px;background-color:#2e1757;padding:1px 20px 20px 20px;">
-<p>FamicomCD - My favorite project of mine. The concept behind FamicomCD is that it is a fictional CD-based console for the original Famicom. The project itself encapsulates multiple mini-projects under FamicomCD such as Super Mario Bros. CD.</p>
+<div class=boxes style="text-align:center;border-radius:10px;background-color:#2e1757;padding:20px 20px 1px 20px;">
+<a href="https://famicomcd.github.io/"><img class=projecticons style="border-radius:10px;height:auto;" src="image/famicomcdembed.png"></a>
 
-<a href="https://famicomcd.github.io/"><img class=projecticons style="border-radius:10px;height:auto;" src="https://famicomcd.github.io/embedimages/famicomcdembed.png"></a>
+<p>My favorite project of mine. The concept behind FamicomCD is that it is a fictional CD-based console for the original Famicom. The project itself encapsulates multiple mini-projects under FamicomCD such as Super Mario Bros. CD.</p>
 </div>
 
 <div style="padding-top:20px;"></div>
 
-<div class=boxes style="text-align:center;background-color:#2e1757;padding:1px 20px 20px 20px;">
-<p>Browser Flipnote Frogs - A silly little project I made in a few days. It is meant to "recreate" the Flipnote frogs from the title screen of Flipnote Studio for the most part. (Beware, this one requires a quicker internet speed due to the amount of graphics and code).</p>
-
+<div class=boxes style="text-align:center;background-color:#2e1757;padding:20px 20px 1px 20px;">
 <a href="https://kingmayro.github.io/frogs"><img class=projecticons style="border-radius:10px;height:auto;" src="image/frogembed.png"></a>
+
+<p>Browser Flipnote Frogs - A silly little project I made in a few days. It is meant to "recreate" the Flipnote frogs from the title screen of Flipnote Studio for the most part. (Beware, this one requires a quicker internet speed due to the amount of graphics and code).</p>
 </div>
 </div>
 
