so changing this from button to div fixes flashing

--- a/frogs.html
+++ b/frogs.html
@@ -355,7 +355,7 @@
 
 
 	<a href="https://kingmayro.github.io/" style="float:right;padding-left:5px;"><img class=verticalbutton src="browserfrog/buttons/Home.png"></img></a>	
-	<button onclick="showMessageBox()" style="float:right;padding-left:5px;"><img class=verticalbutton src="browserfrog/buttons/Info.png"></img></button>		
+	<div onclick="showMessageBox()" style="float:right;padding-left:5px;"><img class=verticalbutton src="browserfrog/buttons/Info.png"></img></div>		
 
 	</div>
     <button id="refreshButton" style="display:none;" onclick="location.reload()"><img class=verticalbutton src="browserfrog/buttons/Refresh.png"></img></button>
