Few more /frogs updates to ui

--- a/frogs.html
+++ b/frogs.html
@@ -179,23 +179,13 @@
 
 
 
-		@media screen and (max-width: 1006px) {
-
-		.buttonsleft {
-		float:left;
-		display:block;
-		}
-		
-		.buttonsright {
-		float:right;
-		display:block;
-		}
-
-
-		}
-
 		
 		@media screen and (max-width: 1135px) {
+		
+			.footerthing{
+			height: 94px;
+			}
+
 		
 			body {
 			
@@ -262,6 +252,10 @@
 			height: 99px;
 			}
 
+			.verticalbutton {
+			width: auto;
+			height: 45px;
+			}
 			
 			.frog-container {
             width: 110px;
@@ -277,9 +271,9 @@
 
 		
 		}
+			
 		
-		
-		@media screen and (max-width: 750px) {
+		@media screen and (max-width: 780px) {
 				
 			.footerthing{
 			height: 99px;
@@ -306,7 +300,16 @@
 			text-align:center;
 			font-size:10px;
 			}
-
+			
+			.buttonsleft {
+			float:left;
+			display:block;
+			}
+		
+			.buttonsright {
+			float:right;
+			display:block;
+			}
 		
 		}
 		
