--- a/index.html
+++ b/index.html
@@ -192,6 +192,8 @@
 
 <div class=mainboxes style="background-color:#231242;">
 
+<p style="font-size:30px;margin:0;padding-bottom:20px;text-align:center;">Projects</p>
+
 <div class=boxes style="text-align:center;border-radius:10px;background-color:#2e1757;padding:20px 20px 1px 20px;">
 <a href="https://famicomcd.github.io/"><img class=projecticons style="border-radius:10px;height:auto;" src="image/famicomcdembed.png"></a>
 
