--- a/frogs.html
+++ b/frogs.html
@@ -35,6 +35,13 @@
 		background-color: white;
 		color: #cd532d;
 		overflow: hidden;
+		user-select: none;
+        -webkit-user-drag: none;
+        -khtml-user-drag: none;
+        -moz-user-select: none;
+        -moz-user-drag: none; 
+        -ms-user-select: none; 
+        user-drag: none; 
 		}
 	
         main {
@@ -56,13 +63,6 @@
             width: 100%;
             height: 100%;
             position: absolute;
-            user-select: none;
-            -webkit-user-drag: none;
-            -khtml-user-drag: none;
-            -moz-user-select: none;
-            -moz-user-drag: none; 
-            -ms-user-select: none; 
-            user-drag: none; 
         }
 		
 		    
@@ -139,7 +139,7 @@
         width: 500px; 
 		word-wrap: break-word;
 		text-align:center;
-		font-size:14px;		
+		font-size:14px;
 		}
 		
 		.buttonsleft {
@@ -545,6 +545,11 @@
                 {src: "browserfrog/Chew2.png", duration: 100},
                 {src: "browserfrog/Chew1.png", duration: 100},
                 {src: "browserfrog/Idle.png", duration: 100}
+            ],
+			//keeping this here just in case I can get sleep working properly again
+			Sleep: [
+                {src: "browserfrog/Sleep1.png", duration: 700},
+                {src: "browserfrog/Sleep2.png", duration: 700},
             ]
         };
 
@@ -1020,7 +1025,7 @@ function isAnimationInProgress(frog) {
             frogContainer.appendChild(messageBubble);
             setTimeout(() => {
                 messageBubble.remove();
-            }, 5000); // Remove message bubble after 5 seconds
+            }, 5500);
         }
     }
 
