adding a white bg for better readability

--- a/frogs.html
+++ b/frogs.html
@@ -430,7 +430,7 @@
 
 	<div class=footerthing></div>
 
-   <div id="jsCheck">This browser does not support enough JavaScript to run this page</div>
+   <div id="jsCheck" style="background-color:white;">This browser does not support enough JavaScript to run this page properly, sorry.</div>
 
 	<div class=main>
 	
