testing new settings menu

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 	 <div style="height:100%;">
 	 
 			<div class=dealwiththeicon>
-	 		<img class=icons src="image/KingMayro.webp">
+	 		<img class=icons src="image/KingMayro.jpg">
 			</div>
 
 			<div class=padneed style="display: flex;">
@@ -179,7 +179,7 @@
 			<div class=padneed style="padding-top:20px; display: flex;">			
 						<div class=boxes style="background-color:#2e1757;padding:1px 2px 2px 1px;width:100%;">
 						
-							<p style="padding:0px 30px 0px 30px;">Hiya, I'm Mayro, a graphic designer/pixel artist and writer, rom hacker, and amatuer web programmer. I like pastel colors, especially purple, City Pop and Jazz Fusion, and Frogs.</p>
+							<p style="padding:0px 30px 0px 30px;">Heya, I'm Mayro, a graphic designer/pixel artist and writer, rom hacker, and amatuer web programmer. I like pastel colors, especially purple, City Pop and Jazz Fusion, and Frogs.</p>
 						
 						</div>
 
