--- a/index.html
+++ b/index.html
@@ -17,127 +17,11 @@
 		<meta data-react-helmet="true" name="theme-color" content="#693cbd"/>
 
 		<link rel="stylesheet" href="https://famicomcd.github.io/reuse/common.css">
-
+		<link rel="stylesheet" href="https://kingmayro.github.io/reuse/common.css">
 		
 		<style>
 		
-		@font-face {
-		font-family: "Seurat Pro";
-		src: url(https://famicomcd.github.io/fonts/FOT-Seurat-ProB.otf);
-		}
-		
-		body {
-		background-color:#170d29;
-		}
 
-		.mainpage {
-		margin-left:20%;
-		margin-right:20%;
-		color:white;
-		font-family: "Seurat Pro";
-		}
-
-		.icons {
-		border-radius: 600px;
-		width: 200px;
-		height: auto;
-		float: left;
-		
-		}
-		
-		.boxes{
-		border-radius:10px;
-		}
-		
-		.spboxes{
-		border-radius:10px;
-		}
-		
-		.mainboxes{
-		border-radius:10px;
-		padding:20px;
-		}
-		
-		.padneed {
-		padding-left:10px;
-		}
-
-		.name {
-		font-size:30px;
-		padding-left:30px;
-		margin:0;
-		}
-		
-		.socialicons {
-		display: inline-flex;
-		float: left;
-		padding-left:32px;
-		}
-		
-		.projecticons {
-		width:60%;
-		}
-		
-		
-		
-		@media screen and (max-width: 1400px) {
-		
-		.mainpage {
-		margin-left:10%;
-		margin-right:10%;
-		}
-		
-		}
-		
-		
-		@media screen and (max-width: 1000px) {
-		
-		
-		.icons {
-		width: 50%;
-		height: auto;
-		text-align:center;
-		float:none;
-		}
-		
-		.projecticons {
-		width:100%;
-		}
-		
-		.spboxes{
-		text-align:center;
-		}
-		
-		.socialicons {
-		float: none;
-		padding-left:0px;
-		}
-		
-		.name {
-		padding-left:0px;
-		}
-		
-		.mainpage {
-		margin-left:0%;
-		margin-right:0%;
-		font-size:15px;
-		}
-		
-		.mainboxes{
-		border-radius:10px;
-		padding:10px;
-		}
-		
-		.padneed {
-		padding-left:0px;
-		}
-		
-		.dealwiththeicon {
-		text-align:center;		
-		}
-		
-		
-		}
 		
 		</style>
       
