--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 <div style="padding-top:20px;"></div>
 
 <div class=boxes style="background-color:#231242;padding:20px;">
-© Copyright 2024, King Mayro
+© 2023 - 2024 King Mayro
 </div>
 
 </div>
