--- a/artfight/2024.html
+++ b/artfight/2024.html
@@ -33,7 +33,7 @@
 			</div>
 			
 			<div class=boxeshome style="border-radius:10px;background-color:#2e1757;padding:20px 20px 4.5px 20px;">
-				<img style="margin:0;width:50px;vertical-align:center;text-align:center;" src="../image/home.png">
+				<a href="https://kingmayro.github.io"><img style="margin:0;width:50px;vertical-align:center;text-align:center;" src="../image/home.png"></a>
 			</div>
 			
 			<div style="padding-bottom:20px;"></div>
@@ -51,6 +51,7 @@
 		<div style="text-align:center;">
 			<div class=row><img src="images/jessjess24.png" class=art></div>
 			<div class=row><img src="images/CekroKephri24.png" class=art></div>
+			<div class=row><img src="images/CheekyCheeky24.gif" class=art></div>
 		</div>
 
 
