--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<meta data-react-helmet="true" name="theme-color" content="#693cbd"/>
 
 		<link rel="stylesheet" href="https://famicomcd.github.io/reuse/common.css">
-		<link rel="stylesheet" href="https://kingmayro.github.io/reuse/common.css">
+		<link rel="stylesheet" href="reuse/common.css">
 		
 		<style>
 		
