--- a/artfight/2024.html
+++ b/artfight/2024.html
@@ -39,7 +39,7 @@
 			<div style="padding-bottom:20px;"></div>
 		
 			<div class=boxes style="text-align:center;border-radius:10px;background-color:#2e1757;padding:20px;">
-			<p style="margin:0;">Click or tap on any of the peices of artwork to see more information about the attack! When hovering, gifs or images that are half resolution are marked with the <img style="vertical-align:middle;width:30px;"src="images/icons/halftext.svg"> icon. To view the original resolution, you must go to the info page.</p>
+			<p style="margin:0;">Click or tap on any of the peices of artwork to see more information about the attack! Viewing attacks or characters requires an Artfight account. <!-- When hovering, gifs or images that are half resolution are marked with the <img style="vertical-align:middle;width:30px;"src="images/icons/halftext.svg"> icon. To view the original resolution, you must go to the info page. --></p>
 			</div>
 			
 			
@@ -49,9 +49,9 @@
 	
 	
 		<div style="text-align:center;">
-			<div class=row> <a href="https://kingmayro.github.io/artfight/2024/jess"><img src="images/jessjess24.png" class=art></a> </div>
+			<div class=row> <a href="https://kingmayro.github.io/artfight/2024/jess"><img src="images/jessjess24.png" class=art></a> <a href="https://kingmayro.github.io/artfight/2024/chance"><img src="images/halfres/AngelChance24Half.gif" class=art></a> </div>
 			<div class=row> <a href="https://kingmayro.github.io/artfight/2024/kephri"><img src="images/CekroKephri24.png" class=art></a> </div>
-			<div class=row> <a href="https://kingmayro.github.io/artfight/2024/cheeky"><div class=gifs><img src="images/halfres/CheekyCheeky24Half.gif" class=art><img class=gifmark src="images/icons/half.svg"></a> </div></div>
+			<div class=row> <a href="https://kingmayro.github.io/artfight/2024/cheeky"><!--<div class=gifs>--><img src="images/halfres/CheekyCheeky24Half.gif" class=art><!--<img class=gifmark src="images/icons/half.svg">--></a> </div></div>
 		</div>
 
 
