--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
 		<meta data-react-helmet="true" name="theme-color" content="#693cbd"/>
 
 		<link rel="stylesheet" href="https://famicomcd.github.io/reuse/common.css">
-		<link rel="stylesheet" href="reuse/common.css">
+		<link rel="stylesheet" href="https://kingmayro.github.io/reuse/common.css">
 		
 		<style>
 		
@@ -45,7 +45,7 @@
 <p>Something ain't right! If you believe you're here by mistake, please report it to me!</p>
 
 	<div style="padding:20px;">
-		<a href="https://kingmayro.github.io/"><img class="boxeshome" style="text-align:center;float:none;display:initial;width:150px;" src="image/home.png"></a>
+		<a href="https://kingmayro.github.io/"><img class="boxeshome" style="text-align:center;float:none;display:initial;width:150px;" src="https://kingmayro.github.io/image/home.png"></a>
 	</div>
 
 </div>
