--- a/artfight.html
+++ b/artfight.html
@@ -19,7 +19,7 @@
 		<head>
 		
 		<body>
-		<p>Oops! Couldn't redirect properly.</p>
+		<p>Redirecting, please wait! Or click below to redirect.</p>
 		<p><a href="https://artfight.net/~KingMayro">Redirect to Artfight.</a></p>
 		</body>
 		
