--- a/.well-known/discord.html
+++ b/.well-known/discord.html
@@ -1,1 +1,18 @@
-dh=6ba1e4320c4a911d7f1ca02dbcca3747e82401c3
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <title></title>
+    <meta content="dh=6ba1e4320c4a911d7f1ca02dbcca3747e82401c3" />
+
+  </head>
+  <body>
+
+
+
+
+
+
+
+  </body>
+</html>
