--- a/frogs.html
+++ b/frogs.html
@@ -576,7 +576,7 @@
 					  
 					<a class=othericonsyt href="https://www.youtube.com/@KingMayro"><img src="browserfrog/buttons/YouTube.png" alt="YouTube" style="width:40px;height:auto;padding-left:9px;padding-top:20px;"></a>
 					
-					<a class=othericons href="https://famicomcd.github.io/"><img src="browserfrog/buttons/FamicomCD.png" alt="FamicomCD" style="width:40px;height:auto;padding-left:8px;padding-top:20px;"></a>
+					<a class=othericons href="https://famicomcd.org/"><img src="browserfrog/buttons/FamicomCD.png" alt="FamicomCD" style="width:40px;height:auto;padding-left:8px;padding-top:20px;"></a>
 				</div>
 			</div> 
 		</div>
