--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<meta name="twitter:card" content="summary_large_image">
 		<meta data-react-helmet="true" name="theme-color" content="#693cbd"/>
 
-		<link rel="stylesheet" href="https://famicomcd.github.io/reuse/common.css">
+		<link rel="stylesheet" href="https://famicomcd.org/reuse/common.css">
 		<link rel="stylesheet" href="reuse/common.css">
 		
 		<style>
@@ -79,7 +79,7 @@
 <p style="font-size:30px;margin:0;padding-bottom:20px;text-align:center;">Projects</p>
 
 <div class=boxes style="text-align:center;border-radius:10px;background-color:#2e1757;padding:20px 20px 1px 20px;">
-<a href="https://famicomcd.github.io/"><img class=projecticons style="border-radius:10px;height:auto;" src="image/famicomcdembed.png"></a>
+<a href="https://famicomcd.org/"><img class=projecticons style="border-radius:10px;height:auto;" src="image/famicomcdembed.png"></a>
 
 <p>My favorite project of mine. The concept behind FamicomCD is that it is a fictional CD-based console for the original Famicom. The project itself encapsulates multiple mini-projects under FamicomCD such as Super Mario Bros. CD.</p>
 </div>
