--- a/artfight/2024.html
+++ b/artfight/2024.html
@@ -16,7 +16,7 @@
 		<meta name="twitter:card" content="summary_large_image">
 		<meta data-react-helmet="true" name="theme-color" content="#693cbd"/>
 
-		<link rel="stylesheet" href="https://famicomcd.github.io/reuse/common.css">
+		<link rel="stylesheet" href="https://famicomcd.org/reuse/common.css">
 		<link rel="stylesheet" href="../reuse/common.css">
 		<link rel="stylesheet" href="../reuse/artwork.css">
 
