--- a/frogs.html
+++ b/frogs.html
@@ -680,10 +680,10 @@
 	<img class="schemeselecticon" data-scheme="defaultgreen" src="browserfrog/colors/defaultgreen/Idle.png">
 	<img class="schemeselecticon" data-scheme="classic" src="browserfrog/colors/classic/Idle.png">
 	<!-- <img class="schemeselecticon" data-scheme="classicog" src="browserfrog/colors/classicog/Idle.png"> -->
-	<img src="browserfrog/misc/nothing.png">
-	<img src="browserfrog/misc/nothing.png">
+	<img src="browserfrog/Misc/nothing.png">
+	<img src="browserfrog/Misc/nothing.png">
 	
-	<img class="line" style="margin:6px 0 6px 0;" src="browserfrog/misc/line.png">
+	<img class="line" style="margin:6px 0 6px 0;" src="browserfrog/Misc/line.png">
 </div>
 
 <div class="schemegrid">
