--- a/funny.html
+++ b/funny.html
@@ -3,6 +3,10 @@
 	
 		<head>
 		
+		<meta property="og:title" content="There is an embed, now what?"/>
+		<meta property="og:url" content="https://kingmayro.github.io/funny"/>
+		<meta data-react-helmet="true" name="theme-color" content="#483c97"/>
+		
 		<meta http-equiv="refresh" content="0; url=https://www.youtube.com/watch?v=dQw4w9WgXcQ" />
 
 	
