--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 							<div style="padding-right:9px"> </div>  
 							<a href="https://www.youtube.com/@KingMayro"><img src="image/youtubesocialicon.png" alt="YouTube" class="socials"></a>
 							<div style="padding-left:8px"> </div> 
-							<a href="kingmayro.famicomcd.org"><img src="image/twittersocialicon.png" alt="Bluesky" class="socials"></a>
+							<a href="https://kingmayro.famicomcd.org"><img src="image/twittersocialicon.png" alt="Bluesky" class="socials"></a>
 							</div>
 						
 						</div>
