--- a/frogs/beta.html
+++ b/frogs/beta.html
@@ -190,7 +190,7 @@
 		
 		.schemeselecticon {
 		width:70px;
-		cursor:pointer;
+		cursor: url('browserfrog/Misc/hand/pointer.png') 8 18, pointer;
 		}
 		
 		.line {
