--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<meta name="twitter:card" content="summary_large_image">
 		<meta data-react-helmet="true" name="theme-color" content="#693cbd"/>
 
-		<link rel="stylesheet" href="http://localhost/personal/reuse/common.css">
+		<link rel="stylesheet" href="/reuse/common.css">
     </head>
 
 	<body>
